--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "homepage": "https://git-scm.com",
   "scss": "./app/assets/stylesheets/git-scm.css.scss",
   "devDependencies": {
-    "grunt": "~0.4.5",
+    "grunt": "^0.4.5",
     "grunt-autoprefixer": "~2.2.0",
     "grunt-parker": "~0.1.0",
     "grunt-stylelint": "^0.9.0"
   },
   "dependencies": {
-    "stylelint": "7.13.0",
+    "stylelint": "^7.13.0",
     "stylelint-config-primer": "2.2.3"
   }
 }
