--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "homepage": "https://git-scm.com",
   "scss": "./app/assets/stylesheets/git-scm.css.scss",
   "devDependencies": {
-    "grunt": "^0.4.5",
+    "grunt": "^1.0.3",
     "grunt-autoprefixer": "~2.2.0",
-    "grunt-parker": "~0.1.0",
+    "grunt-parker": "^0.2.0",
     "grunt-stylelint": "^0.9.0"
   },
   "dependencies": {
